--- a/src/styles.css
+++ b/src/styles.css
@@ -322,3 +322,94 @@ ion-icon:hover {
   color: #FFFFFC;
   box-shadow: 0 10px 10px rgb(0 0 0 /.7);
 }
+/* CONTACT PAGE  */
+.contact-heading{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 4vw 0;
+}
+.contact-heading > h1{
+  color: #470024;
+  font-size: 8vw;
+  font-weight: 100;
+  padding: 2vw ;
+  border-right: 1px solid #888888;
+  text-shadow: 5px 6px 8px rgb(255 255 255 / 0.9);
+  animation: fadeInLeft2 3s 1;
+}
+.icons {
+  display: flex;
+  flex-direction: column;
+}
+.icons > i > a > ion-icon {
+  color: #FFFFFC;
+  font-size: 2.5em;
+  margin: 0 2vw;
+  /* transition: all 2s; */
+}
+.contact-container {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-around; */
+  align-items: center;
+  width: 80%;
+  margin: 5vw auto 8vw auto;
+}
+form{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.inputs {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.line {
+  width:50vw;
+  height: 3.5vw;
+  margin: 1.8vw;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgb(0 0 0 / 0.2);
+  border: none;
+  opacity: .9;
+  font-family: 'Montserrat', cursive;
+  font-size: 20px;
+  padding-left: 10px;
+  cursor: text;
+}
+.box {
+  width: 50vw;
+  height: 25vw;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgb(0 0 0 / 0.2);
+  border:none;
+  opacity: .9;
+  font-family: 'Montserrat', cursive;
+  margin:1.5vw 0;
+  font-size:22px;
+  padding:10px 0 0 10px;
+  cursor: text;
+}
+.send-button {
+  padding: 1.5vw 5vw;
+  background-color: #95818d;
+  border-radius: 20px;
+  border: none;
+  box-shadow: 0 3px 10px rgb(0 0 0 /.4);
+  color: #FFFFFC;
+  font-size: 25px;
+  font-family: 'Montserrat', cursive;
+  font-weight: 100;
+  margin-bottom: 2vw;
+  cursor: pointer;
+  transition: all .5s;
+}
+.send-button:hover{
+  transform: scale(1.1);
+  opacity: .8;
+  box-shadow: 0 10px 10px rgb(0 0 0 /.7);
+}
